sheet_9/scratch/error
error: creating pointer to member function of non-class type ‘const char’
   19 |     enum {value = Helper<T1,void (T1::*)() const>::value};
      |          ^
/mnt/c/Users/CEM/CLionProjects/sheet3_scratch/exerc_2/task2.h: In instantiation of ‘struct hasPrint<float>’:
/mnt/c/Users/CEM/CLionProjects/sheet3_scratch/exerc_2/task2.h:29:25:   required by substitution of ‘template<class P> typename std::enable_if<(! hasPrint<T1>::value)>::type print(P) [with P = float]’
/mnt/c/Users/CEM/CLionProjects/sheet3_scratch/exerc_2/main.cpp:80:12:   required from here
/mnt/c/Users/CEM/CLionProjects/sheet3_scratch/exerc_2/task2.h:19:10: error: creating pointer to member function of non-class type ‘const float’
/mnt/c/Users/CEM/CLionProjects/sheet3_scratch/exerc_2/task2.h: In instantiation of ‘typename std::enable_if<(! hasPrint<T1>::value)>::type print(P) [with P = Vector; typename std::enable_if<(! hasPrint<T1>::value)>::type = void]’:
/mnt/c/Users/CEM/CLionProjects/sheet3_scratch/exerc_2/main.cpp:81:12:   required from here
/mnt/c/Users/CEM/CLionProjects/sheet3_scratch/exerc_2/task2.h:31:15: error: no match for ‘operator<<’ (operand types are ‘std::ostream’ {aka ‘std::basic_ostream<char>’} and ‘const Vector’)
   31 |     std::cout << p;